[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/bg.png" type="Texture" id=2]
[ext_resource path="res://Notable-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Buttongame.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="." index="0"]

position = Vector2( 514.707, 299.097 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="grid" type="Sprite" parent="." index="1"]

[node name="Text01" type="Label" parent="grid" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 398.0
margin_top = 148.0
margin_right = 663.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[node name="Buttongame1" parent="grid" index="1" instance=ExtResource( 4 )]

margin_left = 183.0
margin_top = 359.0
margin_right = 361.0
margin_bottom = 457.0
text = "Hammer"
pos = 1

[node name="Buttongame2" parent="grid" index="2" instance=ExtResource( 4 )]

margin_left = 450.0
margin_top = 357.0
margin_right = 625.0
margin_bottom = 458.0
text = "Scissor"
pos = 2

[node name="Buttongame3" parent="grid" index="3" instance=ExtResource( 4 )]

margin_left = 703.0
margin_top = 355.0
margin_right = 891.0
margin_bottom = 459.0
text = "Paper"
pos = 3

[node name="Result" type="Label" parent="grid" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 338.0
margin_top = 31.0
margin_right = 737.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "------------"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="grid/Buttongame1" to="." method="_on_Buttongame1_pressed"]

[connection signal="pressed" from="grid/Buttongame2" to="." method="_on_Buttongame2_pressed"]

[connection signal="pressed" from="grid/Buttongame3" to="." method="_on_Buttongame3_pressed"]


